# amazon-review-sentiment

./: .gitignore  README.md  init.sh  pyproject.toml
amazon_review_sentiment/: run.py  settings.py
amazon_review_sentiment/data/: keys.py  toys_data_small.py
amazon_review_sentiment/data_loading/: load_toys_data_small.py
amazon_review_sentiment/models/model1/: README.md  __init__.py
tests/: test_amazon_review_sentiment.py
