[tool.poetry]
name = "amazon-review-sentiment"
version = "0.1.0"
description = ""
authors = ["Vandenn <evan.livelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.6.0"
torchvision = "0.7.0"
future = "0.18.2"
numpy = "1.19.2"
pillow = "7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
